feat: apollo upgrade to 2.0 + dev improvements + localization

--- a/package.json
+++ b/package.json
@@ -37,23 +37,25 @@
     "node": ">=8.11"
   },
   "dependencies": {
-    "apollo-server-express": "1.3.6",
+    "apollo-server": "2.0.0-rc.2",
+    "apollo-server-express": "2.0.0-rc.2",
     "auto-load": "3.0.0",
     "axios": "0.18.0",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.5.1",
     "body-parser": "1.18.3",
-    "bugsnag": "2.4.0",
+    "bugsnag": "2.4.3",
     "bull": "3.4.2",
+    "chalk": "2.4.1",
     "cheerio": "1.0.0-rc.2",
     "child-process-promise": "2.2.1",
-    "chokidar": "2.0.3",
+    "chokidar": "2.0.4",
     "compression": "1.7.2",
     "connect-redis": "3.3.3",
     "cookie-parser": "1.4.3",
     "cors": "2.8.4",
-    "dependency-graph": "0.7.0",
-    "diff2html": "2.3.3",
+    "dependency-graph": "0.7.1",
+    "diff2html": "2.4.0",
     "dotize": "^0.2.0",
     "execa": "0.10.0",
     "express": "4.16.3",
@@ -68,21 +70,21 @@
     "graphql": "0.13.2",
     "graphql-list-fields": "2.0.2",
     "graphql-tools": "3.0.2",
-    "i18next": "11.3.2",
+    "i18next": "11.3.3",
     "i18next-express-middleware": "1.1.1",
     "i18next-localstorage-cache": "1.1.1",
     "i18next-node-fs-backend": "1.0.0",
-    "image-size": "0.6.2",
+    "image-size": "0.6.3",
     "ioredis": "3.2.2",
     "js-yaml": "3.12.0",
-    "jsonwebtoken": "8.2.2",
+    "jsonwebtoken": "8.3.0",
     "klaw": "2.1.1",
     "knex": "0.14.6",
     "lodash": "4.17.10",
     "markdown-it": "8.4.1",
     "markdown-it-abbr": "1.0.4",
-    "markdown-it-anchor": "4.0.0",
-    "markdown-it-attrs": "2.1.0",
+    "markdown-it-anchor": "5.0.2",
+    "markdown-it-attrs": "2.2.0",
     "markdown-it-emoji": "1.4.0",
     "markdown-it-expand-tabs": "1.0.13",
     "markdown-it-external-links": "0.0.6",
@@ -93,10 +95,10 @@
     "markdown-it-sub": "1.0.0",
     "markdown-it-sup": "1.0.0",
     "markdown-it-task-lists": "2.1.1",
-    "mathjax-node": "2.1.0",
+    "mathjax-node": "2.1.1",
     "mime-types": "2.1.18",
     "moment": "2.22.2",
-    "moment-timezone": "0.5.17",
+    "moment-timezone": "0.5.21",
     "mongodb": "3.1.0-beta4",
     "mssql": "4.1.0",
     "multer": "1.3.0",
@@ -124,7 +126,7 @@
     "pm2": "2.10.4",
     "pug": "2.0.3",
     "qr-image": "3.2.0",
-    "raven": "2.6.2",
+    "raven": "2.6.3",
     "read-chunk": "2.1.0",
     "remove-markdown": "0.3.0",
     "request": "2.87.0",
@@ -134,29 +136,30 @@
     "serve-favicon": "2.5.0",
     "sqlite3": "4.0.0",
     "uuid": "3.2.1",
-    "validator": "10.2.0",
+    "validator": "10.4.0",
     "validator-as-promised": "1.0.2",
-    "winston": "3.0.0-rc2",
+    "winston": "3.0.0",
     "yargs": "11.0.0"
   },
   "devDependencies": {
     "@panter/vue-i18next": "0.11.0",
-    "@vue/cli": "3.0.0-beta.15",
-    "apollo-cache-inmemory": "1.2.2",
-    "apollo-client": "2.3.2",
+    "@vue/cli": "3.0.0-rc.3",
+    "apollo-cache-inmemory": "1.2.5",
+    "apollo-client": "2.3.5",
     "apollo-fetch": "0.7.0",
     "apollo-link": "1.2.2",
     "apollo-link-batch-http": "1.2.2",
-    "apollo-link-error": "1.0.9",
+    "apollo-link-error": "1.1.0",
     "apollo-link-http": "1.5.4",
-    "autoprefixer": "8.6.0",
+    "apollo-link-persisted-queries": "0.2.1",
+    "autoprefixer": "8.6.3",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
-    "babel-eslint": "8.2.3",
+    "babel-eslint": "8.2.5",
     "babel-jest": "23.0.1",
     "babel-loader": "7.1.4",
     "babel-plugin-graphql-tag": "1.6.0",
-    "babel-plugin-lodash": "3.3.2",
+    "babel-plugin-lodash": "3.3.4",
     "babel-plugin-transform-imports": "1.5.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
@@ -165,12 +168,11 @@
     "cache-loader": "1.2.2",
     "chart.js": "2.7.2",
     "clean-webpack-plugin": "0.1.19",
-    "colors": "1.3.0",
     "copy-webpack-plugin": "4.5.1",
     "css-loader": "0.28.11",
     "cssnano": "4.0.0-rc.2",
     "duplicate-package-checker-webpack-plugin": "3.0.0",
-    "eslint": "4.19.1",
+    "eslint": "5.0.0",
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "11.0.0",
     "eslint-plugin-import": "2.12.0",
@@ -180,15 +182,16 @@
     "eslint-plugin-vue": "4.5.0",
     "file-loader": "1.1.11",
     "graphiql": "0.11.11",
+    "graphql-persisted-document-loader": "1.0.1",
     "graphql-tag": "^2.9.2",
-    "graphql-voyager": "1.0.0-rc.15",
+    "graphql-voyager": "1.0.0-rc.19",
     "hammerjs": "2.0.8",
     "html-webpack-plugin": "3.2.0",
     "html-webpack-pug-plugin": "0.3.0",
     "i18next-xhr-backend": "1.5.1",
     "ignore-loader": "0.1.2",
     "jest": "23.1.0",
-    "jest-junit": "5.0.0",
+    "jest-junit": "5.1.0",
     "js-cookie": "2.2.0",
     "lodash-webpack-plugin": "0.11.5",
     "mini-css-extract-plugin": "0.4.0",
@@ -206,9 +209,9 @@
     "pug-loader": "2.4.0",
     "pug-plain-loader": "1.0.0",
     "raw-loader": "0.5.1",
-    "react": "16.4.0",
-    "react-dom": "16.4.0",
-    "sass-loader": "7.0.2",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
+    "sass-loader": "7.0.3",
     "sass-resources-loader": "1.3.3",
     "script-ext-html-webpack-plugin": "2.0.1",
     "simple-progress-webpack-plugin": "1.1.2",
@@ -217,29 +220,29 @@
     "stylus-loader": "3.0.2",
     "twemoji-awesome": "1.0.6",
     "url-loader": "1.0.1",
-    "vee-validate": "2.1.0-beta.1",
+    "vee-validate": "2.1.0-beta.2",
     "velocity-animate": "1.5.1",
     "vue": "2.5.16",
-    "vue-apollo": "3.0.0-beta.16",
-    "vue-chartjs": "3.3.1",
+    "vue-apollo": "3.0.0-beta.19",
+    "vue-chartjs": "3.3.2",
     "vue-clipboards": "1.2.4",
     "vue-codemirror": "4.0.5",
     "vue-hot-reload-api": "2.3.0",
     "vue-loader": "15.2.4",
     "vue-material-design-icons": "1.5.1",
-    "vue-moment": "4.0.0-0",
+    "vue-moment": "4.0.0",
     "vue-router": "3.0.1",
     "vue-simple-breakpoints": "1.0.3",
     "vue-template-compiler": "2.5.16",
-    "vuetify": "1.0.18",
+    "vuetify": "1.0.19",
     "vuex": "3.0.1",
     "vuex-persistedstate": "2.5.4",
-    "webpack": "4.10.2",
+    "webpack": "4.12.0",
     "webpack-bundle-analyzer": "2.13.1",
-    "webpack-cli": "3.0.1",
+    "webpack-cli": "3.0.8",
     "webpack-dev-middleware": "3.1.3",
     "webpack-hot-middleware": "2.22.2",
-    "webpack-merge": "4.1.2",
+    "webpack-merge": "4.1.3",
     "whatwg-fetch": "2.0.4",
     "write-file-webpack-plugin": "4.3.2"
   },
