feat: auth + storage config improvements

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "node": ">=8.11"
   },
   "dependencies": {
-    "apollo-server": "2.0.0-rc.2",
+    "apollo-server": "2.0.0-rc.5",
     "apollo-server-express": "2.0.0-rc.2",
     "auto-load": "3.0.0",
     "axios": "0.18.0",
@@ -69,9 +69,9 @@
     "getos": "3.1.0",
     "graphql": "0.13.2",
     "graphql-list-fields": "2.0.2",
-    "graphql-tools": "3.0.2",
+    "graphql-tools": "3.0.4",
     "i18next": "11.3.3",
-    "i18next-express-middleware": "1.1.1",
+    "i18next-express-middleware": "1.2.0",
     "i18next-localstorage-cache": "1.1.1",
     "i18next-node-fs-backend": "1.0.0",
     "image-size": "0.6.3",
@@ -79,7 +79,7 @@
     "js-yaml": "3.12.0",
     "jsonwebtoken": "8.3.0",
     "klaw": "2.1.1",
-    "knex": "0.14.6",
+    "knex": "0.15.0",
     "lodash": "4.17.10",
     "markdown-it": "8.4.1",
     "markdown-it-abbr": "1.0.4",
@@ -99,9 +99,9 @@
     "mime-types": "2.1.18",
     "moment": "2.22.2",
     "moment-timezone": "0.5.21",
-    "mongodb": "3.1.0-beta4",
+    "mongodb": "3.1.0",
     "mssql": "4.1.0",
-    "multer": "1.3.0",
+    "multer": "1.3.1",
     "mysql2": "1.5.3",
     "node-2fa": "1.1.2",
     "oauth2orize": "1.11.0",
@@ -134,12 +134,12 @@
     "scim-query-filter-parser": "1.1.0",
     "semver": "5.5.0",
     "serve-favicon": "2.5.0",
-    "sqlite3": "4.0.0",
-    "uuid": "3.2.1",
+    "sqlite3": "4.0.1",
+    "uuid": "3.3.2",
     "validator": "10.4.0",
     "validator-as-promised": "1.0.2",
     "winston": "3.0.0",
-    "yargs": "11.0.0"
+    "yargs": "12.0.1"
   },
   "devDependencies": {
     "@panter/vue-i18next": "0.11.0",
@@ -152,11 +152,11 @@
     "apollo-link-error": "1.1.0",
     "apollo-link-http": "1.5.4",
     "apollo-link-persisted-queries": "0.2.1",
-    "autoprefixer": "8.6.3",
+    "autoprefixer": "8.6.4",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
     "babel-eslint": "8.2.5",
-    "babel-jest": "23.0.1",
+    "babel-jest": "23.2.0",
     "babel-loader": "7.1.4",
     "babel-plugin-graphql-tag": "1.6.0",
     "babel-plugin-lodash": "3.3.4",
@@ -168,14 +168,14 @@
     "cache-loader": "1.2.2",
     "chart.js": "2.7.2",
     "clean-webpack-plugin": "0.1.19",
-    "copy-webpack-plugin": "4.5.1",
+    "copy-webpack-plugin": "4.5.2",
     "css-loader": "0.28.11",
     "cssnano": "4.0.0-rc.2",
     "duplicate-package-checker-webpack-plugin": "3.0.0",
-    "eslint": "5.0.0",
+    "eslint": "5.0.1",
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "11.0.0",
-    "eslint-plugin-import": "2.12.0",
+    "eslint-plugin-import": "2.13.0",
     "eslint-plugin-node": "6.0.1",
     "eslint-plugin-promise": "3.8.0",
     "eslint-plugin-standard": "3.1.0",
@@ -190,20 +190,20 @@
     "html-webpack-pug-plugin": "0.3.0",
     "i18next-xhr-backend": "1.5.1",
     "ignore-loader": "0.1.2",
-    "jest": "23.1.0",
+    "jest": "23.2.0",
     "jest-junit": "5.1.0",
     "js-cookie": "2.2.0",
     "lodash-webpack-plugin": "0.11.5",
-    "mini-css-extract-plugin": "0.4.0",
+    "mini-css-extract-plugin": "0.4.1",
     "node-sass": "4.9.0",
     "offline-plugin": "5.0.5",
-    "optimize-css-assets-webpack-plugin": "4.0.2",
+    "optimize-css-assets-webpack-plugin": "4.0.3",
     "postcss-cssnext": "3.1.0",
     "postcss-flexbugs-fixes": "3.3.1",
     "postcss-flexibility": "2.0.0",
     "postcss-import": "11.1.0",
     "postcss-loader": "2.1.5",
-    "postcss-preset-env": "5.1.0",
+    "postcss-preset-env": "5.2.1",
     "postcss-selector-parser": "5.0.0-rc.3",
     "pug-lint": "2.5.0",
     "pug-loader": "2.4.0",
@@ -220,7 +220,7 @@
     "stylus-loader": "3.0.2",
     "twemoji-awesome": "1.0.6",
     "url-loader": "1.0.1",
-    "vee-validate": "2.1.0-beta.2",
+    "vee-validate": "2.1.0-beta.5",
     "velocity-animate": "1.5.1",
     "vue": "2.5.16",
     "vue-apollo": "3.0.0-beta.19",
@@ -234,10 +234,10 @@
     "vue-router": "3.0.1",
     "vue-simple-breakpoints": "1.0.3",
     "vue-template-compiler": "2.5.16",
-    "vuetify": "1.0.19",
+    "vuetify": "1.1.1",
     "vuex": "3.0.1",
     "vuex-persistedstate": "2.5.4",
-    "webpack": "4.12.0",
+    "webpack": "4.14.0",
     "webpack-bundle-analyzer": "2.13.1",
     "webpack-cli": "3.0.8",
     "webpack-dev-middleware": "3.1.3",
