--- a/package.json
+++ b/package.json
@@ -234,6 +234,7 @@
     "vue-router": "3.0.1",
     "vue-simple-breakpoints": "1.0.3",
     "vue-template-compiler": "2.5.16",
+    "vuedraggable": "2.16.0",
     "vuetify": "1.1.1",
     "vuex": "3.0.1",
     "vuex-persistedstate": "2.5.4",
