feat: editor page properties

--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "css-loader": "0.28.11",
     "cssnano": "4.0.0-rc.2",
     "duplicate-package-checker-webpack-plugin": "3.0.0",
+    "epic-spinners": "1.0.3",
     "eslint": "5.0.1",
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "11.0.0",
@@ -238,6 +239,7 @@
     "vuedraggable": "2.16.0",
     "vuetify": "1.1.1",
     "vuex": "3.0.1",
+    "vuex-pathify": "1.1.0",
     "vuex-persistedstate": "2.5.4",
     "webpack": "4.14.0",
     "webpack-bundle-analyzer": "2.13.1",
