--- a/package.json
+++ b/package.json
@@ -236,6 +236,7 @@
     "vue-router": "3.0.1",
     "vue-simple-breakpoints": "1.0.3",
     "vue-template-compiler": "2.5.16",
+    "vue-tour": "1.0.1",
     "vuedraggable": "2.16.0",
     "vuetify": "1.1.1",
     "vuex": "3.0.1",
