feat: core improvements + local fs provider + UI fixes

--- a/server/modules/storage/disk/definition.yml
+++ b/server/modules/storage/disk/definition.yml
@@ -1,5 +1,8 @@
 key: disk
-title: Local FS
+title: Local File System
 author: requarks.io
 props:
-  path: String
+  path:
+    type: String
+    title: Path
+    hint: Absolute path without a trailing slash (e.g. /home/wiki/backup, C:\wiki\backup)
