--- a/server/modules/authentication/local/definition.yml
+++ b/server/modules/authentication/local/definition.yml
@@ -1,5 +1,8 @@
 key: local
 title: Local
+description: Built-in authentication for Wiki.js
 author: requarks.io
+logo: https://static.requarks.io/logo/wikijs.svg
+website: https://wiki.js.org
 useForm: true
 props: {}
