--- a/server/modules/authentication/oauth2/definition.yml
+++ b/server/modules/authentication/oauth2/definition.yml
@@ -1,6 +1,9 @@
 key: oauth2
-title: OAuth2
+title: Generic OAuth2
+description: OAuth 2 is an authorization framework that enables applications to obtain limited access to user accounts on an HTTP service.
 author: requarks.io
+logo: https://static.requarks.io/logo/oauth2.svg
+website: https://oauth.net/2/
 useForm: false
 props:
   clientId: String
