--- a/server/modules/authentication/twitch/definition.yml
+++ b/server/modules/authentication/twitch/definition.yml
@@ -1,6 +1,9 @@
 key: twitch
 title: Twitch
+description: Twitch is a live streaming video platform.
 author: requarks.io
+logo: https://static.requarks.io/logo/twitch.svg
+website: https://dev.twitch.tv/docs/authentication/
 useForm: false
 props:
   clientId: String
