--- a/server/modules/storage/git/definition.yml
+++ b/server/modules/storage/git/definition.yml
@@ -1,6 +1,9 @@
 key: git
 title: Git
+description: Git is a version control system for tracking changes in computer files and coordinating work on those files among multiple people.
 author: requarks.io
+logo: https://static.requarks.io/logo/git-alt.svg
+website: https://git-scm.com/
 props:
   authType:
     type: String
