--- a/server/modules/storage/disk/definition.yml
+++ b/server/modules/storage/disk/definition.yml
@@ -1,6 +1,9 @@
 key: disk
 title: Local File System
+description: Local storage on disk or network shares.
 author: requarks.io
+logo: https://static.requarks.io/logo/local-fs.svg
+website: https://wiki.js.org
 props:
   path:
     type: String
