refactor: views consolidation + css fixes

--- a/package.json
+++ b/package.json
@@ -238,8 +238,10 @@
     "vue-moment": "4.0.0",
     "vue-router": "3.0.1",
     "vue-simple-breakpoints": "1.0.3",
+    "vue-status-indicator": "1.1.0",
     "vue-template-compiler": "2.5.17",
     "vue-tour": "1.0.1",
+    "vue-tree-navigation": "3.0.1",
     "vuedraggable": "2.16.0",
     "vuetify": "1.1.10",
     "vuex": "3.0.1",
