--- a/server/modules/authentication/cas/definition.yml
+++ b/server/modules/authentication/cas/definition.yml
@@ -3,7 +3,7 @@ title: CAS
 description: The Central Authentication Service (CAS) is a single sign-on protocol for the web.
 author: requarks.io
 logo: https://static.requarks.io/logo/cas.svg
-website: https://wiki.js.org
+website: https://apereo.github.io/cas/
 useForm: false
 props:
   ssoBaseURL: String
