--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     "node": ">=8.11"
   },
   "dependencies": {
-    "apollo-server": "2.0.0",
-    "apollo-server-express": "2.0.0",
+    "apollo-server": "2.0.2",
+    "apollo-server-express": "2.0.2",
     "auto-load": "3.0.0",
     "axios": "0.18.0",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.5.1",
     "body-parser": "1.18.3",
     "bugsnag": "2.4.3",
-    "bull": "3.4.4",
+    "bull": "3.4.7",
     "chalk": "2.4.1",
     "cheerio": "1.0.0-rc.2",
     "child-process-promise": "2.2.1",
@@ -62,20 +62,20 @@
     "express-brute": "1.0.1",
     "express-brute-redis": "0.0.1",
     "express-session": "1.15.6",
-    "file-type": "8.1.0",
+    "file-type": "9.0.0",
     "filesize.js": "1.0.2",
-    "follow-redirects": "1.5.2",
+    "follow-redirects": "1.5.5",
     "fs-extra": "7.0.0",
     "getos": "3.1.0",
     "graphql": "0.13.2",
     "graphql-list-fields": "2.0.2",
     "graphql-tools": "3.1.1",
-    "i18next": "11.5.0",
+    "i18next": "11.6.0",
     "i18next-express-middleware": "1.2.1",
     "i18next-localstorage-cache": "1.1.1",
     "i18next-node-fs-backend": "1.2.1",
     "image-size": "0.6.3",
-    "ioredis": "3.2.2",
+    "ioredis": "4.0.0",
     "js-yaml": "3.12.0",
     "jsonwebtoken": "8.3.0",
     "klaw": "3.0.0",
@@ -99,7 +99,7 @@
     "mime-types": "2.1.19",
     "moment": "2.22.2",
     "moment-timezone": "0.5.21",
-    "mongodb": "3.1.1",
+    "mongodb": "3.1.3",
     "mssql": "4.1.0",
     "multer": "1.3.1",
     "mysql2": "1.6.1",
@@ -133,7 +133,7 @@
     "raven": "2.6.3",
     "read-chunk": "2.1.0",
     "remove-markdown": "0.3.0",
-    "request": "2.87.0",
+    "request": "2.88.0",
     "request-promise": "4.2.2",
     "scim-query-filter-parser": "1.1.0",
     "semver": "5.5.0",
@@ -147,16 +147,16 @@
   },
   "devDependencies": {
     "@panter/vue-i18next": "0.12.0",
-    "@vue/cli": "3.0.0-rc.11",
-    "apollo-cache-inmemory": "1.2.6",
-    "apollo-client": "2.3.7",
+    "@vue/cli": "3.0.0",
+    "apollo-cache-inmemory": "1.2.7",
+    "apollo-client": "2.3.8",
     "apollo-fetch": "0.7.0",
     "apollo-link": "1.2.2",
     "apollo-link-batch-http": "1.2.2",
     "apollo-link-error": "1.1.0",
     "apollo-link-http": "1.5.4",
     "apollo-link-persisted-queries": "0.2.1",
-    "autoprefixer": "9.1.0",
+    "autoprefixer": "9.1.1",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
     "babel-eslint": "8.2.6",
@@ -180,7 +180,7 @@
     "eslint": "5.3.0",
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "11.0.0",
-    "eslint-plugin-import": "2.13.0",
+    "eslint-plugin-import": "2.14.0",
     "eslint-plugin-node": "7.0.1",
     "eslint-plugin-promise": "3.8.0",
     "eslint-plugin-standard": "3.1.0",
@@ -195,19 +195,19 @@
     "html-webpack-pug-plugin": "0.3.0",
     "i18next-xhr-backend": "1.5.1",
     "ignore-loader": "0.1.2",
-    "jest": "23.4.2",
+    "jest": "23.5.0",
     "jest-junit": "5.1.0",
     "js-cookie": "2.2.0",
     "lodash-webpack-plugin": "0.11.5",
     "mini-css-extract-plugin": "0.4.1",
-    "node-sass": "4.9.2",
+    "node-sass": "4.9.3",
     "offline-plugin": "5.0.5",
     "optimize-css-assets-webpack-plugin": "5.0.0",
     "postcss-cssnext": "3.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-flexibility": "2.0.0",
     "postcss-import": "12.0.0",
-    "postcss-loader": "2.1.6",
+    "postcss-loader": "3.0.0",
     "postcss-preset-env": "5.3.0",
     "postcss-selector-parser": "5.0.0-rc.3",
     "pug-lint": "2.5.0",
@@ -224,7 +224,7 @@
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
     "twemoji-awesome": "1.0.6",
-    "url-loader": "1.0.1",
+    "url-loader": "1.1.0",
     "vee-validate": "2.1.0-beta.7",
     "velocity-animate": "1.5.2",
     "vue": "2.5.17",
@@ -243,7 +243,7 @@
     "vue-tour": "1.0.1",
     "vue-tree-navigation": "3.0.1",
     "vuedraggable": "2.16.0",
-    "vuetify": "1.1.10",
+    "vuetify": "1.1.12",
     "vuex": "3.0.1",
     "vuex-pathify": "1.1.3",
     "vuex-persistedstate": "2.5.4",
