--- a/server/modules/renderer/markdown-emoji/definition.yml
+++ b/server/modules/renderer/markdown-emoji/definition.yml
@@ -2,6 +2,7 @@ key: markdownEmoji
 title: Emoji
 description: Convert tags to emojis
 author: requarks.io
-dependsOn:
-  - markdownCore
+icon: tag_faces
+enabledDefault: true
+dependsOn: markdownCore
 props: {}
