--- a/server/modules/renderer/markdown-mathjax/definition.yml
+++ b/server/modules/renderer/markdown-mathjax/definition.yml
@@ -2,6 +2,7 @@ key: markdownMathjax
 title: Mathjax Pre-Processor
 description: Pre-parse TeX blocks for Mathjax
 author: requarks.io
-dependsOn:
-  - markdownCore
+icon: functions
+enabledDefault: false
+dependsOn: markdownCore
 props: {}
