--- a/tools/docker-compose.yml
+++ b/tools/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   wikidb:
-    image: mongo
+    image: mongo:3
     expose:
       - '27017'
     command: '--smallfiles --bind_ip ::,0.0.0.0'
