fix: docker-compose - mongo - bind to all IPs

--- a/tools/docker-compose.yml
+++ b/tools/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: mongo
     expose:
       - '27017'
-    command: '--smallfiles'
+    command: '--smallfiles --bind_ip ::,0.0.0.0'
     environment:
       - 'MONGO_LOG_DIR=/dev/null'
     volumes:
