--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
   "devDependencies": {
     "@panter/vue-i18next": "0.12.0",
     "@vue/cli": "3.0.0",
+    "animated-number-vue": "0.1.3",
     "apollo-cache-inmemory": "1.2.7",
     "apollo-client": "2.3.8",
     "apollo-fetch": "0.7.0",
@@ -200,10 +201,7 @@
     "html-webpack-pug-plugin": "0.3.0",
     "i18next-xhr-backend": "1.5.1",
     "ignore-loader": "0.1.2",
-    "jest": "23.5.0",
-    "jest-junit": "5.1.0",
     "js-cookie": "2.2.0",
-    "lodash-webpack-plugin": "0.11.5",
     "mini-css-extract-plugin": "0.4.1",
     "node-sass": "4.9.3",
     "offline-plugin": "5.0.5",
@@ -268,21 +266,6 @@
     "Firefox ESR",
     "not ie < 11"
   ],
-  "jest": {
-    "testResultsProcessor": "./node_modules/jest-junit",
-    "collectCoverage": false,
-    "testMatch": [
-      "**/test/**/*.js?(x)",
-      "**/?(*.)(spec|test).js?(x)"
-    ],
-    "verbose": true
-  },
-  "jest-junit": {
-    "suiteName": "jest test",
-    "output": "./test-results/junit.xml",
-    "classNameTemplate": "{classname}-{title}",
-    "titleTemplate": "{classname}-{title}"
-  },
   "postcss": {
     "plugins": {
       "autoprefixer": {},
