--- a/.babelrc
+++ b/.babelrc
@@ -2,10 +2,25 @@
   "comments": true,
   "plugins": [
     "lodash",
-    "graphql-tag"
+    "graphql-tag",
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-syntax-import-meta",
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-json-strings",
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ],
+    "@babel/plugin-proposal-function-sent",
+    "@babel/plugin-proposal-export-namespace-from",
+    "@babel/plugin-proposal-numeric-separator",
+    "@babel/plugin-proposal-throw-expressions"
   ],
   "presets": [
-    ["env"],
-    "stage-2"
+    [
+      "@babel/preset-env"
+    ]
   ]
 }
