--- a/package.json
+++ b/package.json
@@ -42,15 +42,15 @@
     "node": ">=8.11"
   },
   "dependencies": {
-    "apollo-server": "2.0.2",
-    "apollo-server-express": "2.0.2",
-    "auto-load": "3.0.0",
+    "apollo-server": "2.0.6",
+    "apollo-server-express": "2.0.5",
+    "auto-load": "3.0.1",
     "axios": "0.18.0",
     "bcryptjs-then": "1.0.1",
-    "bluebird": "3.5.1",
+    "bluebird": "3.5.2",
     "body-parser": "1.18.3",
     "bugsnag": "2.4.3",
-    "bull": "3.4.7",
+    "bull": "3.4.8",
     "chalk": "2.4.1",
     "cheerio": "1.0.0-rc.2",
     "child-process-promise": "2.2.1",
@@ -59,26 +59,26 @@
     "connect-redis": "3.3.3",
     "cookie-parser": "1.4.3",
     "cors": "2.8.4",
-    "dependency-graph": "0.7.1",
+    "dependency-graph": "0.7.2",
     "diff2html": "2.4.0",
     "dotize": "^0.2.0",
-    "execa": "0.10.0",
+    "execa": "1.0.0",
     "express": "4.16.3",
     "express-brute": "1.0.1",
     "express-brute-redis": "0.0.1",
     "express-session": "1.15.6",
     "file-type": "9.0.0",
     "filesize.js": "1.0.2",
-    "follow-redirects": "1.5.5",
+    "follow-redirects": "1.5.7",
     "fs-extra": "7.0.0",
     "getos": "3.1.0",
-    "graphql": "0.13.2",
+    "graphql": "14.0.0",
     "graphql-list-fields": "2.0.2",
     "graphql-tools": "3.1.1",
     "i18next": "11.6.0",
-    "i18next-express-middleware": "1.2.1",
+    "i18next-express-middleware": "1.3.2",
     "i18next-localstorage-cache": "1.1.1",
-    "i18next-node-fs-backend": "1.2.1",
+    "i18next-node-fs-backend": "2.0.0",
     "image-size": "0.6.3",
     "ioredis": "4.0.0",
     "js-yaml": "3.12.0",
@@ -101,17 +101,17 @@
     "markdown-it-sup": "1.0.0",
     "markdown-it-task-lists": "2.1.1",
     "mathjax-node": "2.1.1",
-    "mime-types": "2.1.19",
+    "mime-types": "2.1.20",
     "moment": "2.22.2",
     "moment-timezone": "0.5.21",
-    "mongodb": "3.1.3",
+    "mongodb": "3.1.4",
     "mssql": "4.1.0",
     "multer": "1.3.1",
     "mysql2": "1.6.1",
     "node-2fa": "1.1.2",
     "node-cache": "4.2.0",
     "oauth2orize": "1.11.0",
-    "objection": "1.2.2",
+    "objection": "1.2.6",
     "ora": "3.0.0",
     "passport": "0.4.0",
     "passport-auth0": "1.0.0",
@@ -133,66 +133,74 @@
     "passport-windowslive": "1.0.2",
     "pg": "7.4.3",
     "pg-hstore": "2.3.2",
-    "pm2": "3.0.3",
+    "pm2": "3.0.4",
     "pug": "2.0.3",
     "qr-image": "3.2.0",
     "raven": "2.6.3",
-    "read-chunk": "2.1.0",
+    "read-chunk": "3.0.0",
     "remove-markdown": "0.3.0",
     "request": "2.88.0",
     "request-promise": "4.2.2",
     "scim-query-filter-parser": "1.1.0",
-    "semver": "5.5.0",
+    "semver": "5.5.1",
     "serve-favicon": "2.5.0",
     "sqlite3": "4.0.2",
     "uuid": "3.3.2",
-    "validator": "10.5.0",
+    "validator": "10.7.1",
     "validator-as-promised": "1.0.2",
     "winston": "3.0.0",
     "yargs": "12.0.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "@panter/vue-i18next": "0.12.0",
-    "@vue/cli": "3.0.0",
+    "@vue/cli": "3.0.1",
     "animated-number-vue": "0.1.3",
-    "apollo-cache-inmemory": "1.2.7",
-    "apollo-client": "2.3.8",
+    "apollo-cache-inmemory": "1.2.9",
+    "apollo-client": "2.4.1",
     "apollo-fetch": "0.7.0",
     "apollo-link": "1.2.2",
     "apollo-link-batch-http": "1.2.2",
     "apollo-link-error": "1.1.0",
     "apollo-link-http": "1.5.4",
     "apollo-link-persisted-queries": "0.2.1",
-    "autoprefixer": "9.1.1",
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
-    "babel-eslint": "8.2.6",
+    "autoprefixer": "9.1.3",
+    "babel-eslint": "9.0.0",
     "babel-jest": "23.4.2",
-    "babel-loader": "7.1.5",
+    "babel-loader": "^8.0.0",
     "babel-plugin-graphql-tag": "1.6.0",
     "babel-plugin-lodash": "3.3.4",
     "babel-plugin-transform-imports": "1.5.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-stage-2": "6.24.1",
     "brace": "0.11.1",
     "cache-loader": "1.2.2",
     "chart.js": "2.7.2",
     "clean-webpack-plugin": "0.1.19",
     "copy-webpack-plugin": "4.5.2",
     "css-loader": "1.0.0",
-    "cssnano": "4.0.5",
+    "cssnano": "4.1.0",
     "duplicate-package-checker-webpack-plugin": "3.0.0",
     "epic-spinners": "1.0.3",
-    "eslint": "5.3.0",
+    "eslint": "5.5.0",
     "eslint-config-requarks": "1.0.7",
-    "eslint-config-standard": "11.0.0",
+    "eslint-config-standard": "12.0.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-node": "7.0.1",
-    "eslint-plugin-promise": "3.8.0",
-    "eslint-plugin-standard": "3.1.0",
+    "eslint-plugin-promise": "4.0.0",
+    "eslint-plugin-standard": "4.0.0",
     "eslint-plugin-vue": "4.7.1",
-    "file-loader": "1.1.11",
+    "file-loader": "2.0.0",
     "graphiql": "0.11.11",
     "graphql-persisted-document-loader": "1.0.1",
     "graphql-tag": "^2.9.2",
@@ -203,10 +211,10 @@
     "i18next-xhr-backend": "1.5.1",
     "ignore-loader": "0.1.2",
     "js-cookie": "2.2.0",
-    "mini-css-extract-plugin": "0.4.1",
+    "mini-css-extract-plugin": "0.4.2",
     "node-sass": "4.9.3",
     "offline-plugin": "5.0.5",
-    "optimize-css-assets-webpack-plugin": "5.0.0",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-cssnext": "3.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-flexibility": "2.0.0",
@@ -224,21 +232,21 @@
     "sass-resources-loader": "1.3.3",
     "script-ext-html-webpack-plugin": "2.0.1",
     "simple-progress-webpack-plugin": "1.1.2",
-    "style-loader": "0.22.1",
+    "style-loader": "0.23.0",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
     "twemoji-awesome": "1.0.6",
-    "url-loader": "1.1.0",
-    "vee-validate": "2.1.0-beta.7",
+    "url-loader": "1.1.1",
+    "vee-validate": "2.1.0-beta.8",
     "velocity-animate": "1.5.2",
     "vue": "2.5.17",
-    "vue-apollo": "3.0.0-beta.19",
+    "vue-apollo": "3.0.0-beta.21",
     "vue-chartjs": "3.4.0",
     "vue-clipboards": "1.2.4",
     "vue-codemirror": "4.0.5",
     "vue-hot-reload-api": "2.3.0",
-    "vue-loader": "15.3.0",
-    "vue-material-design-icons": "1.6.0",
+    "vue-loader": "15.4.1",
+    "vue-material-design-icons": "2.1.1",
     "vue-moment": "4.0.0",
     "vue-router": "3.0.1",
     "vue-simple-breakpoints": "1.0.3",
@@ -247,15 +255,15 @@
     "vue-tour": "1.0.1",
     "vue-tree-navigation": "3.0.1",
     "vuedraggable": "2.16.0",
-    "vuetify": "1.1.12",
+    "vuetify": "1.2.1",
     "vuex": "3.0.1",
     "vuex-pathify": "1.1.3",
     "vuex-persistedstate": "2.5.4",
-    "webpack": "4.16.5",
+    "webpack": "4.17.2",
     "webpack-bundle-analyzer": "2.13.1",
     "webpack-cli": "3.1.0",
-    "webpack-dev-middleware": "3.1.3",
-    "webpack-hot-middleware": "2.22.3",
+    "webpack-dev-middleware": "3.2.0",
+    "webpack-hot-middleware": "2.23.1",
     "webpack-merge": "4.1.4",
     "whatwg-fetch": "2.0.4",
     "write-file-webpack-plugin": "4.3.2",
