fix: mssql initial migration crash

--- a/config.sample.yml
+++ b/config.sample.yml
@@ -22,7 +22,8 @@ bindIP: 0.0.0.0
 # ---------------------------------------------------------------------
 # Supported Database Engines:
 # - postgres = PostgreSQL 9.5 or later
-# - mysql = MySQL 5.7.8 / MariaDB 10.2.7 or later
+# - mysql = MySQL 5.7.8
+# - mariadb = MariaDB 10.2.7 or later
 # - mssql = MS SQL Server 2012 or later
 # - sqlite = SQLite 3.9 or later
 
