--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
   },
   "homepage": "https://github.com/Requarks/wiki#readme",
   "engines": {
-    "node": ">=8.11"
+    "node": ">=10.10"
   },
   "dependencies": {
-    "apollo-server": "2.0.6",
-    "apollo-server-express": "2.0.5",
+    "apollo-server": "2.0.7",
+    "apollo-server-express": "2.0.6",
     "auto-load": "3.0.1",
     "axios": "0.18.0",
     "bcryptjs-then": "1.0.1",
@@ -72,15 +72,16 @@
     "follow-redirects": "1.5.7",
     "fs-extra": "7.0.0",
     "getos": "3.1.0",
-    "graphql": "14.0.0",
+    "graphql": "14.0.2",
     "graphql-list-fields": "2.0.2",
     "graphql-tools": "3.1.1",
-    "i18next": "11.6.0",
+    "i18next": "11.7.0",
     "i18next-express-middleware": "1.3.2",
     "i18next-localstorage-cache": "1.1.1",
-    "i18next-node-fs-backend": "2.0.0",
+    "i18next-node-fs-backend": "2.1.0",
     "image-size": "0.6.3",
     "ioredis": "4.0.0",
+    "js-binary": "1.2.0",
     "js-yaml": "3.12.0",
     "jsonwebtoken": "8.3.0",
     "klaw": "3.0.0",
@@ -136,7 +137,7 @@
     "pm2": "3.0.4",
     "pug": "2.0.3",
     "qr-image": "3.2.0",
-    "raven": "2.6.3",
+    "raven": "2.6.4",
     "read-chunk": "3.0.0",
     "remove-markdown": "0.3.0",
     "request": "2.88.0",
@@ -148,8 +149,8 @@
     "uuid": "3.3.2",
     "validator": "10.7.1",
     "validator-as-promised": "1.0.2",
-    "winston": "3.0.0",
-    "yargs": "12.0.1"
+    "winston": "3.1.0",
+    "yargs": "12.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
@@ -176,13 +177,13 @@
     "apollo-link-error": "1.1.0",
     "apollo-link-http": "1.5.4",
     "apollo-link-persisted-queries": "0.2.1",
-    "autoprefixer": "9.1.3",
+    "autoprefixer": "9.1.5",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.4.2",
     "babel-loader": "^8.0.0",
     "babel-plugin-graphql-tag": "1.6.0",
     "babel-plugin-lodash": "3.3.4",
-    "babel-plugin-transform-imports": "1.5.0",
+    "babel-plugin-transform-imports": "1.5.1",
     "brace": "0.11.1",
     "cache-loader": "1.2.2",
     "chart.js": "2.7.2",
@@ -197,7 +198,7 @@
     "eslint-config-standard": "12.0.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-node": "7.0.1",
-    "eslint-plugin-promise": "4.0.0",
+    "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-standard": "4.0.0",
     "eslint-plugin-vue": "4.7.1",
     "file-loader": "2.0.0",
@@ -226,8 +227,8 @@
     "pug-loader": "2.4.0",
     "pug-plain-loader": "1.0.0",
     "raw-loader": "0.5.1",
-    "react": "16.4.2",
-    "react-dom": "16.4.2",
+    "react": "16.5.0",
+    "react-dom": "16.5.0",
     "sass-loader": "7.1.0",
     "sass-resources-loader": "1.3.3",
     "script-ext-html-webpack-plugin": "2.0.1",
@@ -240,7 +241,7 @@
     "vee-validate": "2.1.0-beta.8",
     "velocity-animate": "1.5.2",
     "vue": "2.5.17",
-    "vue-apollo": "3.0.0-beta.21",
+    "vue-apollo": "3.0.0-beta.24",
     "vue-chartjs": "3.4.0",
     "vue-clipboards": "1.2.4",
     "vue-codemirror": "4.0.5",
@@ -255,7 +256,7 @@
     "vue-tour": "1.0.1",
     "vue-tree-navigation": "3.0.1",
     "vuedraggable": "2.16.0",
-    "vuetify": "1.2.1",
+    "vuetify": "1.2.3",
     "vuex": "3.0.1",
     "vuex-pathify": "1.1.3",
     "vuex-persistedstate": "2.5.4",
@@ -266,8 +267,8 @@
     "webpack-hot-middleware": "2.23.1",
     "webpack-merge": "4.1.4",
     "whatwg-fetch": "2.0.4",
-    "write-file-webpack-plugin": "4.3.2",
-    "xterm": "3.6.0"
+    "write-file-webpack-plugin": "4.4.0",
+    "xterm": "3.7.0"
   },
   "browserslist": [
     "> 1%",
