--- a/server/modules/renderer/html-blockquotes/definition.yml
+++ b/server/modules/renderer/html-blockquotes/definition.yml
@@ -1,6 +1,6 @@
 key: htmlBlockquotes
 title: Blockquotes
-description: Embed audio players for audio content
+description: Parse blockquotes box styling
 author: requarks.io
 icon: insert_comment
 enabledDefault: true
