--- a/server/modules/rendering/html-plantuml/definition.yml
+++ b/server/modules/rendering/html-plantuml/definition.yml
@@ -1,8 +1,8 @@
-key: markdownPlantuml
+key: htmlPlantuml
 title: PlantUML
 description: Generate diagrams from PlantUML syntax
 author: requarks.io
 icon: multiline_chart
 enabledDefault: false
-dependsOn: markdownCore
+dependsOn: htmlCore
 props: {}
