--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "graphql": "14.0.2",
     "graphql-list-fields": "2.0.2",
     "graphql-tools": "3.1.1",
+    "highlight.js": "9.12.0",
     "i18next": "11.7.0",
     "i18next-express-middleware": "1.3.2",
     "i18next-localstorage-cache": "1.1.1",
