feat: add editor selection + code editor + grapejs POC

--- a/package.json
+++ b/package.json
@@ -203,6 +203,7 @@
     "eslint-plugin-standard": "4.0.0",
     "eslint-plugin-vue": "4.7.1",
     "file-loader": "2.0.0",
+    "grapesjs": "0.14.29",
     "graphiql": "0.11.11",
     "graphql-persisted-document-loader": "1.0.1",
     "graphql-tag": "^2.9.2",
@@ -230,6 +231,7 @@
     "raw-loader": "0.5.1",
     "react": "16.5.0",
     "react-dom": "16.5.0",
+    "resolve-url-loader": "3.0.0",
     "sass-loader": "7.1.0",
     "sass-resources-loader": "1.3.3",
     "script-ext-html-webpack-plugin": "2.0.1",
