--- a/server/modules/editor/markdown/definition.yml
+++ b/server/modules/editor/markdown/definition.yml
@@ -1,6 +1,6 @@
 key: markdown
 title: Markdown
-description: Default Markdown editor
+description: Basic Markdown editor
 contentType: markdown
 author: requarks.io
 props: {}
