--- a/server/modules/rendering/html-codehighlighter/definition.yml
+++ b/server/modules/rendering/html-codehighlighter/definition.yml
@@ -1,6 +1,6 @@
 key: htmlCodehighlighter
-title: Code Highlighting
-description: Syntax highlighter for programming code
+title: Code Highlighting Post-Processor
+description: Syntax detector for programming code
 author: requarks.io
 icon: palette
 enabledDefault: true
