--- a/server/modules/rendering/markdown-mathjax/definition.yml
+++ b/server/modules/rendering/markdown-mathjax/definition.yml
@@ -1,6 +1,6 @@
 key: markdownMathjax
-title: Mathjax Pre-Processor
-description: Pre-parse TeX blocks for Mathjax
+title: Mathjax Preprocessor
+description: Prepare TeX blocks for Mathjax
 author: requarks.io
 icon: functions
 enabledDefault: false
