--- a/package.json
+++ b/package.json
@@ -39,63 +39,63 @@
   },
   "dependencies": {
     "auto-load": "~3.0.0",
-    "axios": "~0.16.2",
+    "axios": "~0.18.0",
     "bcryptjs-then": "~1.0.1",
     "bluebird": "~3.5.0",
-    "body-parser": "~1.17.2",
+    "body-parser": "~1.18.3",
     "bunyan": "~1.8.12",
     "cheerio": "~1.0.0-rc.2",
     "child-process-promise": "~2.2.1",
-    "chokidar": "~1.7.0",
+    "chokidar": "~2.0.4",
     "compression": "~1.7.0",
     "connect-flash": "~0.1.1",
-    "connect-mongo": "~1.3.2",
+    "connect-mongo": "~2.0.1",
     "cookie-parser": "~1.4.3",
-    "cron": "~1.2.1",
-    "diff2html": "~2.3.0",
-    "execa": "~0.8.0",
-    "express": "~4.15.4",
+    "cron": "~1.4.1",
+    "diff2html": "~2.4.0",
+    "execa": "~1.0.0",
+    "express": "~4.16.3",
     "express-brute": "1.0.1",
-    "express-brute-mongoose": "~0.0.9",
+    "express-brute-mongoose": "~1.0.2",
     "express-session": "~1.15.5",
-    "file-type": "~6.1.0",
+    "file-type": "~9.0.0",
     "filesize.js": "~1.0.2",
-    "follow-redirects": "~1.2.4",
-    "fs-extra": "~4.0.1",
+    "follow-redirects": "~1.5.8",
+    "fs-extra": "~7.0.0",
     "git-wrapper2-promise": "~0.2.9",
     "highlight.js": "~9.12.0",
-    "i18next": "~9.0.0",
-    "i18next-express-middleware": "~1.0.5",
-    "i18next-node-fs-backend": "~1.0.0",
+    "i18next": "~11.9.0",
+    "i18next-express-middleware": "~1.3.2",
+    "i18next-node-fs-backend": "~2.1.0",
     "image-size": "~0.6.0",
-    "jimp": "~0.2.28",
-    "js-yaml": "~3.9.1",
-    "jsonwebtoken": "~7.4.3",
-    "klaw": "~2.1.0",
-    "levelup": "~1.3.9",
+    "jimp": "~0.5.0",
+    "js-yaml": "~3.12.0",
+    "jsonwebtoken": "~8.3.0",
+    "klaw": "~3.0.0",
+    "levelup": "~3.1.1",
     "lodash": "~4.17.4",
     "markdown-it": "~8.4.0",
     "markdown-it-abbr": "~1.0.4",
-    "markdown-it-anchor": "~4.0.0",
-    "markdown-it-attrs": "~1.1.0",
+    "markdown-it-anchor": "~5.0.2",
+    "markdown-it-attrs": "~2.3.1",
     "markdown-it-emoji": "~1.4.0",
     "markdown-it-expand-tabs": "~1.0.12",
     "markdown-it-external-links": "0.0.6",
     "markdown-it-footnote": "~3.0.1",
     "markdown-it-mathjax": "~2.0.0",
-    "markdown-it-task-lists": "~2.0.1",
-    "mathjax-node": "~1.2.0",
-    "memdown": "~1.2.4",
+    "markdown-it-task-lists": "~2.1.1",
+    "mathjax-node": "~2.1.1",
+    "memdown": "~3.0.0",
     "mime-types": "~2.1.16",
-    "moment": "~2.18.1",
+    "moment": "~2.22.2",
     "moment-timezone": "~0.5.13",
-    "mongodb": "~2.2.31",
-    "mongoose": "~4.11.9",
+    "mongodb": "~3.1.6",
+    "mongoose": "~5.2.15",
     "multer": "~1.3.0",
     "node-2fa": "~1.1.2",
-    "node-graceful": "~0.2.3",
+    "node-graceful": "~0.3.1",
     "opencollective": "~1.0.3",
-    "ora": "~1.3.0",
+    "ora": "~3.0.0",
     "passport": "~0.4.0",
     "passport-azure-ad-oauth2": "0.0.4",
     "passport-facebook": "~2.1.1",
@@ -107,68 +107,68 @@
     "passport-slack": "0.0.7",
     "passport-windowslive": "~1.0.2",
     "passport.socketio": "~3.7.0",
-    "pm2": "~2.6.1",
+    "pm2": "~3.1.2",
     "pug": "~2.0.0-rc.3",
-    "raven": "~2.4.1",
-    "read-chunk": "~2.1.0",
-    "remove-markdown": "~0.2.2",
-    "request": "~2.81.0",
-    "search-index-adder": "~0.3.9",
-    "search-index-searcher": "~0.2.10",
-    "semver": "~5.4.1",
-    "serve-favicon": "~2.4.3",
+    "raven": "~2.6.4",
+    "read-chunk": "~3.0.0",
+    "remove-markdown": "~0.3.0",
+    "request": "~2.88.0",
+    "search-index-adder": "~0.4.0",
+    "search-index-searcher": "~0.4.2",
+    "semver": "~5.5.1",
+    "serve-favicon": "~2.5.0",
     "simplemde": "~1.11.2",
-    "socket.io": "~2.0.2",
+    "socket.io": "~2.1.1",
     "stopword": "~0.1.6",
     "stream-to-promise": "~2.2.0",
-    "tar": "~4.0.1",
+    "tar": "~4.4.6",
     "through2": "~2.0.3",
-    "validator": "~8.1.0",
+    "validator": "~10.7.1",
     "validator-as-promised": "~1.0.2",
-    "winston": "~2.3.1",
-    "yargs": "~8.0.1"
+    "winston": "~3.1.0",
+    "yargs": "~12.0.2"
   },
   "devDependencies": {
     "@glimpse/glimpse": "~0.22.15",
-    "@panter/vue-i18next": "~0.5.0",
+    "@panter/vue-i18next": "~0.12.0",
     "babel-cli": "~6.26.0",
-    "babel-jest": "~20.0.3",
+    "babel-jest": "~23.6.0",
     "babel-plugin-transform-object-assign": "~6.22.0",
     "babel-preset-es2015": "~6.24.1",
-    "brace": "~0.10.0",
-    "colors": "~1.1.2",
-    "consolidate": "~0.14.5",
-    "eslint": "~4.5.0",
-    "eslint-config-standard": "~10.2.1",
-    "eslint-plugin-import": "~2.7.0",
-    "eslint-plugin-node": "~5.1.0",
-    "eslint-plugin-promise": "~3.5.0",
-    "eslint-plugin-standard": "~3.0.1",
-    "fuse-box": "~2.2.2",
-    "i18next-xhr-backend": "~1.4.2",
-    "jest": "~20.0.4",
-    "jest-junit": "~3.1.0",
-    "jquery": "~3.2.1",
-    "jquery-contextmenu": "~2.5.0",
-    "jquery-simple-upload": "~1.0.0",
+    "brace": "~0.11.1",
+    "colors": "~1.3.2",
+    "consolidate": "~0.15.1",
+    "eslint": "~5.6.0",
+    "eslint-config-standard": "~12.0.0",
+    "eslint-plugin-import": "~2.14.0",
+    "eslint-plugin-node": "~7.0.1",
+    "eslint-plugin-promise": "~4.0.1",
+    "eslint-plugin-standard": "~4.0.0",
+    "fuse-box": "~3.5.0",
+    "i18next-xhr-backend": "~1.5.1",
+    "jest": "~23.6.0",
+    "jest-junit": "~5.1.0",
+    "jquery": "~3.3.1",
+    "jquery-contextmenu": "~2.7.0",
+    "jquery-simple-upload": "~1.1.0",
     "jquery-smooth-scroll": "~2.2.0",
     "jquery-sticky": "~1.0.4",
     "lodash-cli": "~4.17.4",
     "lodash-es": "~4.17.4",
-    "node-sass": "~4.5.3",
-    "nodemon": "~1.11.0",
-    "pug-lint": "~2.4.0",
+    "node-sass": "~4.9.3",
+    "nodemon": "~1.18.4",
+    "pug-lint": "~2.5.0",
     "twemoji-awesome": "~1.0.6",
-    "typescript": "~2.5.2",
-    "uglify-es": "~3.0.28",
-    "vee-validate": "~2.0.0-rc.14",
-    "vue": "~2.4.2",
-    "vue-clipboards": "~1.1.0",
-    "vue-lodash": "~1.0.3",
-    "vue-resource": "~1.3.4",
-    "vue-template-compiler": "~2.4.2",
-    "vue-template-es2015-compiler": "~1.5.3",
-    "vuex": "~2.4.0"
+    "typescript": "~3.0.3",
+    "uglify-es": "~3.3.9",
+    "vee-validate": "~2.1.0-beta.9",
+    "vue": "~2.5.17",
+    "vue-clipboards": "~1.2.4",
+    "vue-lodash": "~2.0.0",
+    "vue-resource": "~1.5.1",
+    "vue-template-compiler": "~2.5.17",
+    "vue-template-es2015-compiler": "~1.6.0",
+    "vuex": "~3.0.1"
   },
   "jest": {
     "testResultsProcessor": "./node_modules/jest-junit",
