--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "i18next-express-middleware": "~1.3.2",
     "i18next-node-fs-backend": "~2.1.0",
     "image-size": "~0.6.0",
+    "install-script": "~1.0.0",
     "jimp": "~0.5.0",
     "js-yaml": "~3.12.0",
     "jsonwebtoken": "~8.3.0",
