--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "follow-redirects": "~1.5.8",
     "fs-extra": "~7.0.0",
     "generator-install": "~0.3.1",
+    "generator-jasmine": "~2.0.1",
     "git-wrapper2-promise": "~0.2.9",
     "highlight.js": "~9.12.0",
     "i18next": "~11.9.0",
