--- a/package.json
+++ b/package.json
@@ -1,197 +1,46 @@
 {
-  "name": "wiki",
-  "version": "1.0.0",
-  "description": "A modern, lightweight and powerful wiki app built on NodeJS, Git and Markdown",
-  "main": "wiki.js",
-  "scripts": {
-    "start": "node wiki start",
-    "stop": "node wiki stop",
-    "restart": "node wiki restart",
-    "build": "node tools/fuse",
-    "dev": "node tools/fuse -d",
-    "dev-configure": "node tools/fuse -c",
-    "test": "jest",
-    "postinstall": "opencollective postinstall"
-  },
-  "bin": {
-    "wiki": "wiki.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Requarks/wiki.git"
-  },
-  "keywords": [
-    "wiki",
-    "wikis",
-    "docs",
-    "documentation",
-    "markdown",
-    "guides"
-  ],
-  "author": "Nicolas Giard",
-  "license": "AGPL-3.0",
-  "bugs": {
-    "url": "https://github.com/Requarks/wiki/issues"
-  },
-  "homepage": "https://github.com/Requarks/wiki#readme",
+  "private": true,
   "engines": {
-    "node": ">=6.11.1"
-  },
-  "dependencies": {
-    "auto-load": "~3.0.0",
-    "axios": "~0.18.0",
-    "bcryptjs-then": "~1.0.1",
-    "bluebird": "~3.5.0",
-    "body-parser": "~1.18.3",
-    "bunyan": "~1.8.12",
-    "cheerio": "~1.0.0-rc.2",
-    "child-process-promise": "~2.2.1",
-    "chokidar": "~2.0.4",
-    "compression": "~1.7.0",
-    "connect-flash": "~0.1.1",
-    "connect-mongo": "~2.0.1",
-    "cookie-parser": "~1.4.3",
-    "cron": "~1.4.1",
-    "diff2html": "~2.4.0",
-    "execa": "~1.0.0",
-    "express": "~4.16.3",
-    "express-brute": "1.0.1",
-    "express-brute-mongoose": "~1.0.2",
-    "express-session": "~1.15.5",
-    "file-type": "~9.0.0",
-    "filesize.js": "~1.0.2",
-    "follow-redirects": "~1.5.8",
-    "fs-extra": "~7.0.0",
-    "generator-install": "~0.3.1",
-    "generator-jasmine": "~2.0.1",
-    "git-wrapper2-promise": "~0.2.9",
-    "highlight.js": "~9.12.0",
-    "i18next": "~11.9.0",
-    "i18next-express-middleware": "~1.3.2",
-    "i18next-node-fs-backend": "~2.1.0",
-    "image-size": "~0.6.0",
-    "install-script": "~1.0.0",
-    "jimp": "~0.5.0",
-    "js-yaml": "~3.12.0",
-    "jsonwebtoken": "~8.3.0",
-    "klaw": "~3.0.0",
-    "levelup": "~3.1.1",
-    "lodash": "~4.17.4",
-    "markdown-it": "~8.4.0",
-    "markdown-it-abbr": "~1.0.4",
-    "markdown-it-anchor": "~5.0.2",
-    "markdown-it-attrs": "~2.3.1",
-    "markdown-it-emoji": "~1.4.0",
-    "markdown-it-expand-tabs": "~1.0.12",
-    "markdown-it-external-links": "0.0.6",
-    "markdown-it-footnote": "~3.0.1",
-    "markdown-it-mathjax": "~2.0.0",
-    "markdown-it-task-lists": "~2.1.1",
-    "mathjax-node": "~2.1.1",
-    "memdown": "~3.0.0",
-    "mime-types": "~2.1.16",
-    "moment": "~2.22.2",
-    "moment-timezone": "~0.5.13",
-    "mongodb": "~3.1.6",
-    "mongoose": "~5.2.15",
-    "multer": "~1.3.0",
-    "node-2fa": "~1.1.2",
-    "node-graceful": "~0.3.1",
-    "opencollective": "~1.0.3",
-    "ora": "~3.0.0",
-    "passport": "~0.4.0",
-    "passport-azure-ad-oauth2": "0.0.4",
-    "passport-facebook": "~2.1.1",
-    "passport-github2": "~0.1.10",
-    "passport-google-oauth20": "~1.0.0",
-    "passport-ldapauth": "~2.0.0",
-    "passport-local": "~1.0.0",
-    "passport-openidconnect": "~0.0.2",
-    "passport-slack": "0.0.7",
-    "passport-windowslive": "~1.0.2",
-    "passport.socketio": "~3.7.0",
-    "pm2": "~3.1.2",
-    "pug": "~2.0.0-rc.3",
-    "raven": "~2.6.4",
-    "read-chunk": "~3.0.0",
-    "remove-markdown": "~0.3.0",
-    "request": "~2.88.0",
-    "resolve-up": "~1.0.0",
-    "search-index-adder": "~0.4.0",
-    "search-index-searcher": "~0.4.2",
-    "semver": "~5.5.1",
-    "serve-favicon": "~2.5.0",
-    "simplemde": "~1.11.2",
-    "socket.io": "~2.1.1",
-    "stopword": "~0.1.6",
-    "stream-to-promise": "~2.2.0",
-    "tar": "~4.4.6",
-    "through2": "~2.0.3",
-    "validator": "~10.7.1",
-    "validator-as-promised": "~1.0.2",
-    "winston": "~3.1.0",
-    "yargs": "~12.0.2"
+    "node": ">=4"
   },
   "devDependencies": {
-    "@glimpse/glimpse": "~0.22.15",
-    "@panter/vue-i18next": "~0.12.0",
-    "babel-cli": "~6.26.0",
-    "babel-jest": "~23.6.0",
-    "babel-plugin-transform-object-assign": "~6.22.0",
-    "babel-preset-es2015": "~6.24.1",
-    "brace": "~0.11.1",
-    "colors": "~1.3.2",
-    "consolidate": "~0.15.1",
-    "eslint": "~5.6.0",
-    "eslint-config-standard": "~12.0.0",
-    "eslint-plugin-import": "~2.14.0",
-    "eslint-plugin-node": "~7.0.1",
-    "eslint-plugin-promise": "~4.0.1",
-    "eslint-plugin-standard": "~4.0.0",
-    "fuse-box": "~3.5.0",
-    "i18next-xhr-backend": "~1.5.1",
-    "jest": "~23.6.0",
-    "jest-junit": "~5.1.0",
-    "jquery": "~3.3.1",
-    "jquery-contextmenu": "~2.7.0",
-    "jquery-simple-upload": "~1.1.0",
-    "jquery-smooth-scroll": "~2.2.0",
-    "jquery-sticky": "~1.0.4",
-    "lodash-cli": "~4.17.4",
-    "lodash-es": "~4.17.4",
-    "node-sass": "~4.9.3",
-    "nodemon": "~1.18.4",
-    "pug-lint": "~2.5.0",
-    "twemoji-awesome": "~1.0.6",
-    "typescript": "~3.0.3",
-    "uglify-es": "~3.3.9",
-    "vee-validate": "~2.1.0-beta.9",
-    "vue": "~2.5.17",
-    "vue-clipboards": "~1.2.4",
-    "vue-lodash": "~2.0.0",
-    "vue-resource": "~1.5.1",
-    "vue-template-compiler": "~2.5.17",
-    "vue-template-es2015-compiler": "~1.6.0",
-    "vuex": "~3.0.1"
+    "babel-core": "^6.4.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.5.2",
+    "browser-sync": "^2.2.1",
+    "del": "^2.2.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.0.1",
+    "gulp-babel": "^6.1.1",
+    "gulp-cache": "^0.4.2",
+    "gulp-cssnano": "^2.0.0",
+    "gulp-eslint": "^3.0.0",
+    "gulp-filter": "^4.0.0",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.0.1",
+    "gulp-load-plugins": "^1.2.4",
+    "gulp-plumber": "^1.0.1",
+    "gulp-sass": "^3.0.0",
+    "gulp-size": "^2.1.0",
+    "gulp-sourcemaps": "^2.2.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-useref": "^3.0.0",
+    "main-bower-files": "^2.5.0",
+    "run-sequence": "^1.2.2",
+    "wiredep": "^4.0.0"
   },
-  "jest": {
-    "testResultsProcessor": "./node_modules/jest-junit",
-    "collectCoverage": false,
-    "testMatch": [
-      "**/test/**/*.js?(x)",
-      "**/?(*.)(spec|test).js?(x)"
-    ],
-    "verbose": true
-  },
-  "jest-junit": {
-    "suiteName": "jest test",
-    "output": "./test-results/junit.xml",
-    "classNameTemplate": "{classname}-{title}",
-    "titleTemplate": "{classname}-{title}"
-  },
-  "collective": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/wikijs",
-    "logo": "https://opencollective.com/opencollective/logo.txt"
+  "eslintConfig": {
+    "env": {
+      "es6": true,
+      "node": true,
+      "browser": true
+    },
+    "rules": {
+      "quotes": [
+        2,
+        "single"
+      ]
+    }
   }
 }
