--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     }
   },
   "dependencies": {
+    "generator-feathers-plugin": "~1.0.1",
     "generator-jhipster": "~5.3.4",
     "yeoman-generator": "~3.1.1",
     "yo": "~2.0.5"
