--- a/package.json
+++ b/package.json
@@ -44,14 +44,19 @@
     }
   },
   "dependencies": {
+    "generator-code": "~1.1.37",
+    "generator-electrode": "~4.2.4",
     "generator-feathers": "~2.6.3",
     "generator-feathers-plugin": "~1.0.1",
     "generator-generator": "~4.0.2",
+    "generator-jasmine": "~2.0.1",
     "generator-jest": "~1.6.0",
     "generator-jhipster": "~5.3.4",
     "generator-license": "~5.4.0",
     "generator-mocha": "~2.0.1",
     "generator-node": "~2.5.0",
+    "generator-npm-init": "~1.4.1",
+    "generator-primer-module": "~1.0.8",
     "yeoman-environment": "~2.3.3",
     "yeoman-generator": "~3.1.1",
     "yeoman-generator-asmagin": "~3.2.0",
