fix: modules non-string config + live trail logging

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "getos": "3.1.0",
     "graphql": "14.0.2",
     "graphql-list-fields": "2.0.2",
+    "graphql-subscriptions": "1.0.0",
     "graphql-tools": "4.0.0",
     "highlight.js": "9.12.0",
     "i18next": "11.9.0",
@@ -147,6 +148,7 @@
     "semver": "5.5.1",
     "serve-favicon": "2.5.0",
     "sqlite3": "4.0.2",
+    "subscriptions-transport-ws": "0.9.15",
     "uslug": "1.0.4",
     "uuid": "3.3.2",
     "validator": "10.8.0",
@@ -179,6 +181,8 @@
     "apollo-link-error": "1.1.1",
     "apollo-link-http": "1.5.5",
     "apollo-link-persisted-queries": "0.2.1",
+    "apollo-link-ws": "1.0.9",
+    "apollo-utilities": "1.0.21",
     "autoprefixer": "9.1.5",
     "babel-eslint": "10.0.1",
     "babel-jest": "23.6.0",
