feat: auth jwt, permissions, login ui (wip)

--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "passport-facebook": "2.1.1",
     "passport-github2": "0.1.11",
     "passport-google-oauth20": "1.0.0",
+    "passport-jwt": "4.0.0",
     "passport-ldapauth": "2.1.0",
     "passport-local": "1.0.0",
     "passport-oauth2": "1.4.0",
@@ -264,6 +265,7 @@
     "vue-template-compiler": "2.5.17",
     "vue-tour": "1.0.1",
     "vue-tree-navigation": "3.0.1",
+    "vue2-animate": "2.1.0",
     "vuedraggable": "2.16.0",
     "vuetify": "1.2.5",
     "vuex": "3.0.1",
