fix: missing filesize server dependency

--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "express-brute-redis": "0.0.1",
     "express-session": "1.15.6",
     "file-type": "10.2.0",
-    "filesize.js": "1.0.2",
+    "filesize": "3.6.1",
     "follow-redirects": "1.5.9",
     "fs-extra": "7.0.0",
     "getos": "3.1.0",
@@ -209,6 +209,7 @@
     "eslint-plugin-standard": "4.0.0",
     "eslint-plugin-vue": "4.7.1",
     "file-loader": "2.0.0",
+    "filesize.js": "1.0.2",
     "grapesjs": "0.14.33",
     "graphiql": "0.12.0",
     "graphql-persisted-document-loader": "1.0.1",
